k8s/torchpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mlab-torchpod
  namespace: mlab2 
  labels:
    app: mlab-torchpod
    group: deepvac
spec:
  nodeName: ai03
  containers:
  - name: mlab-torchpod 
    image: gemfield/torchpod:1.0
    imagePullPolicy: IfNotPresent 
    workingDir: /home/gemfield 
    resources:
      requests:
        memory: "6Gi"
      limits:
        memory: "24Gi" 
    ports:
    - name: vnc
      containerPort: 5900
    - name: novnc
      containerPort: 7030
    livenessProbe:
      httpGet:
        path: /
        port: novnc
      initialDelaySeconds: 60
      periodSeconds: 3
    volumeMounts:
    - mountPath: /dev/shm
      name: dshm
    - name: home4gemfield
      mountPath: /home/gemfield
    - name: hostpvds
      mountPath: /gemfield/hostpv
    - name: hostpvds2
      mountPath: /gemfield/hostpv2
    - name: publicds
      mountPath: /opt/public
      readOnly: true
    - name: privateds
      mountPath: /opt/private
      readOnly: true
  hostNetwork: false
  restartPolicy: Always 
  volumes:
  - name: dshm
    emptyDir:
      medium: Memory
      sizeLimit: "2Gi"
  - name: home4gemfield
    persistentVolumeClaim:
       claimName: gemfield
  - name: publicds
    persistentVolumeClaim:
       claimName: public-dataset
  - name: privateds
    persistentVolumeClaim:
       claimName: private-dataset
  - name: hostpvds
    persistentVolumeClaim:
        claimName: ai3-hostpvc
  - name: hostpvds2
    persistentVolumeClaim:
        claimName: ai3-hostpvc2
---
apiVersion: v1
kind: Service
metadata:
  name: gemfield-service
  namespace: mlab2
  labels:
    app: mlab-torchpod
spec:
  externalIPs:
    - 192.168.0.34
  ports:
    - port: 27031
      targetPort: 7030
      name: novnc
    - port: 5901
      targetPort: 5900
      name: vnc
  selector:
    app: mlab-torchpod
